--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -75,7 +75,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .mobile-menu {
@@ -86,4 +85,84 @@
 
 .nav__active {
   font-weight: 700 !important;
+}
+
+.sticky__header {
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  position: -webkit-sticky !important;
+  position: sticky !important;
+  top: 0;
+  left: 0;
+  box-shadow: 3px 3px 8px -3px #ddd;
+  background-color: var(--hero-bg);
+}
+
+/* media queries */
+
+@media only screen and (max-width: 768px) {
+  .navigation {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.53);
+    z-index: 999;
+    display: none;
+  }
+
+  .menu {
+    position: absolute;
+    height: 100%;
+    width: 250px;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    z-index: 3999;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .active__menu {
+    display: block;
+  }
+
+  .mobile-menu {
+    display: block;
+  }
+
+  .mobile-menu span i {
+    font-size: 1rem;
+  }
+  .nav__logo img {
+    width: 1rem;
+    height: 1rem;
+  }
+  .nav__logo h1 {
+    font-size: 1rem;
+  }
+  .nav__logo h1 {
+    font-size: 1rem;
+  }
+  .fav__icon i,
+  .cart__icon i {
+    font-size: 1.2rem !important;
+  }
+
+  .mobile-menu span i {
+    display: block;
+  }
+  .nav__icons span img {
+    width: 1.4rem;
+    height: 1.4rem;
+  }
+
+  .header {
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+  }
 }
