--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -97,6 +97,7 @@
   left: 0;
   box-shadow: 3px 3px 8px -3px #ddd;
   background-color: var(--hero-bg);
+  /* z-index: 999999 */
 }
 
 /* media queries */
@@ -109,7 +110,7 @@
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.53);
-    z-index: 999;
+    /* z-index: 999; */
     display: none;
   }
 
