--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -2,17 +2,26 @@
   background: linear-gradient(rgba(0, 0, 0, 0.562), rgba(0, 0, 0, 0.562)),
     url("../assets/images/bedroom.jpg") no-repeat center center;
   background-size: cover;
- height: 25vh;
+  height: 25vh;
   display: flex;
   justify-items: center;
   align-items: center;
-
 }
 
 .common__section h1 {
   color: #fff;
   text-align: center;
   font-weight: 600;
-  
+}
 
+/* media queries */
+@media only screen and (max-width: 768px) {
+  .common__section {
+    padding: 70px 0;
+  }
+
+  .common__section h1 {
+    font-size: 1.4rem;
+    text-transform: capitalize;
+  }
 }
