--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -38,7 +38,18 @@
   padding: 8px 10px;
 }
 
-.search__box span{
-   color: var(--primary-color) !important;
+.search__box span {
+  color: var(--primary-color) !important;
+}
+
+/* media queries */
+@media only screen and (max-width: 768px) {
+  .filter__widget {
+    margin-bottom: 30px;
   }
-  
+
+  .filter__widget select {
+    padding: 7px 20px;
+    font-size: 0.9rem;
+  }
+}
